<resources>
    <string name="app_name">FireNet</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message...</string>
</resources>